--- a/requirements.txt
+++ b/requirements.txt
@@ -16,27 +16,46 @@ anyio==4.3.0
     # via
     #   httpx
     #   openai
+argon2-cffi==23.1.0
+    # via minio
+argon2-cffi-bindings==21.2.0
+    # via argon2-cffi
 attrs==23.2.0
     # via aiohttp
+azure-core==1.30.1
+    # via azure-storage-blob
+azure-storage-blob==12.19.1
+    # via pymilvus
 certifi==2024.2.2
     # via
     #   httpcore
     #   httpx
+    #   minio
     #   requests
+cffi==1.16.0
+    # via
+    #   argon2-cffi-bindings
+    #   cryptography
 charset-normalizer==3.3.2
     # via requests
+cryptography==42.0.5
+    # via azure-storage-blob
 dataclasses-json==0.6.5
     # via
     #   langchain
     #   langchain-community
 distro==1.9.0
     # via openai
+environs==9.5.0
+    # via pymilvus
 frozenlist==1.4.1
     # via
     #   aiohttp
     #   aiosignal
 greenlet==3.0.3
     # via sqlalchemy
+grpcio==1.60.0
+    # via pymilvus
 h11==0.14.0
     # via httpcore
 httpcore==1.0.5
@@ -49,6 +68,8 @@ idna==3.7
     #   httpx
     #   requests
     #   yarl
+isodate==0.6.1
+    # via azure-storage-blob
 jsonpatch==1.33
     # via
     #   langchain
@@ -72,7 +93,11 @@ langsmith==0.1.52
     #   langchain-community
     #   langchain-core
 marshmallow==3.21.1
-    # via dataclasses-json
+    # via
+    #   dataclasses-json
+    #   environs
+minio==7.2.7
+    # via pymilvus
 multidict==6.0.5
     # via
     #   aiohttp
@@ -84,7 +109,9 @@ numpy==1.26.4
     #   langchain
     #   langchain-community
     #   pandas
-openai==1.24.1
+    #   pyarrow
+    #   scipy
+openai==1.25.0
     # via -r requirements.in
 orjson==3.10.2
     # via langsmith
@@ -93,7 +120,17 @@ packaging==23.2
     #   langchain-core
     #   marshmallow
 pandas==2.2.2
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   pymilvus
+protobuf==5.26.1
+    # via pymilvus
+pyarrow==16.0.0
+    # via pymilvus
+pycparser==2.22
+    # via cffi
+pycryptodome==3.20.0
+    # via minio
 pydantic==2.7.1
     # via
     #   langchain
@@ -102,8 +139,12 @@ pydantic==2.7.1
     #   openai
 pydantic-core==2.18.2
     # via pydantic
+pymilvus==2.4.1
+    # via -r requirements.in
 python-dateutil==2.9.0.post0
     # via pandas
+python-dotenv==1.0.1
+    # via environs
 pytz==2024.1
     # via pandas
 pyyaml==6.0.1
@@ -115,12 +156,19 @@ regex==2024.4.28
     # via tiktoken
 requests==2.31.0
     # via
+    #   azure-core
     #   langchain
     #   langchain-community
     #   langsmith
+    #   pymilvus
     #   tiktoken
+scipy==1.13.0
+    # via pymilvus
 six==1.16.0
-    # via python-dateutil
+    # via
+    #   azure-core
+    #   isodate
+    #   python-dateutil
 sniffio==1.3.1
     # via
     #   anyio
@@ -141,6 +189,9 @@ tqdm==4.66.2
     # via openai
 typing-extensions==4.11.0
     # via
+    #   azure-core
+    #   azure-storage-blob
+    #   minio
     #   openai
     #   pydantic
     #   pydantic-core
@@ -150,7 +201,14 @@ typing-inspect==0.9.0
     # via dataclasses-json
 tzdata==2024.1
     # via pandas
+ujson==5.9.0
+    # via pymilvus
 urllib3==2.2.1
-    # via requests
+    # via
+    #   minio
+    #   requests
 yarl==1.9.4
     # via aiohttp
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
