--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -37,14 +37,14 @@ jobs:
     needs: [lint, image-misconfiguration]
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Build image tag
         id: build_image_tag
         run: |
           echo "::set-output name=IMAGE_TAG::$(make app-get-version)"
-          echo "::set-output name=ACT::${ACT}"
-
-      - name: Checkout
-        uses: actions/checkout@v2
+          echo "::set-output name=ACT::${ACT}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
