--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: ./app
+          context: .
           file: ./Dockerfile
           tags: ${{ steps.build_image_tag.outputs.IMAGE_TAG }}
           outputs: type=docker,dest=/tmp/openai-rag-chatbot-app.tar
